--- a/ShoppingProject.WebAPI/ShoppingProject.WebAPI.csproj
+++ b/ShoppingProject.WebAPI/ShoppingProject.WebAPI.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ShoppingProject.Business\ShoppingProject.Business.csproj" />
     <ProjectReference Include="..\ShoppingProject.Data\ShoppingProject.Data.csproj" />
   </ItemGroup>
 
