--- a/ShoppingProject.WebAPI/appsettings.json
+++ b/ShoppingProject.WebAPI/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "ShoppingConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Shopping;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  //"ConnectionStrings": {
+  //  "ShoppingConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Shopping;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "AllowedHosts": "*"
 }
